altered links alignment so no longer overlap red button

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -46,9 +46,10 @@
 }
 .links {
 	padding-top: 34px;
+    text-align: right;
 }
 .links a {
-	font-size: 20px;
+	font-size: 18px;
 	color: black;
 	border-bottom: 2px solid #dfdfdf;
     font-family: 'fira_sansregular', sans-serif;
